--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
           http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 		 version="3.0">
 
-	<display-name>ZDP Web Application</display-name>
+	<display-name>iTech-2017</display-name>
 
 	<welcome-file-list>
 		<welcome-file>/views/index.html</welcome-file>
