--- a/pom.xml
+++ b/pom.xml
@@ -137,12 +137,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.22</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>0.9.1.2</version>
 
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -166,13 +166,13 @@
 			<version>0.0.1-SNAPSHOT</version> <exclusions> <exclusion> <groupId>org.springframework</groupId> 
 			<artifactId>*</artifactId> </exclusion> </exclusions> </dependency> -->
 
-		<dependency>
+		<!--<dependency>
 			<groupId>jdk.tools</groupId>
 			<artifactId>jdk.tools</artifactId>
 			<version>1.7.0_05</version>
 			<scope>system</scope>
 			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 
 	<build>
